<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateEffectActivity" >

    <TextView
        android:id="@+id/create_ingredient_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/create_effect_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ingredient_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/create_ingredient_title"
        android:layout_marginTop="16dp"
        android:text="@string/effect_name" />

    <EditText
        android:id="@+id/ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ingredient_name_label"
        android:ems="10" />

    <TextView
        android:id="@+id/skyrim_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ingredient_name"
        android:layout_marginTop="25dp"
        android:text="@string/skyrim_code" />

    <EditText
        android:id="@+id/skyrim_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/skyrim_code_label"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/base_cost_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skyrim_code"
        android:layout_centerVertical="true"
        android:text="@string/base_cost" />

    <EditText
        android:id="@+id/base_cost"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/base_cost_label"
        android:ems="10" />

    <EditText
        android:id="@+id/base_mag"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/base_mag_label"
        android:ems="10" />

    <TextView
        android:id="@+id/base_mag_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/base_mag"
        android:layout_alignBottom="@+id/base_mag"
        android:layout_toRightOf="@+id/create_ingredient_title"
        android:text="@string/base_mag" />

    <TextView
        android:id="@+id/base_dur_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/base_cost_label"
        android:layout_below="@+id/base_cost"
        android:layout_marginTop="26dp"
        android:text="@string/base_dur" />

    <EditText
        android:id="@+id/value"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/value_label"
        android:layout_alignBottom="@+id/value_label"
        android:layout_toRightOf="@+id/value_label"
        android:ems="10" />

    <EditText
        android:id="@+id/base_dur"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/base_dur_label"
        android:layout_alignBottom="@+id/base_dur_label"
        android:layout_toRightOf="@+id/base_dur_label"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/value_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/base_dur"
        android:layout_alignBottom="@+id/base_dur"
        android:layout_alignRight="@+id/base_mag_label"
        android:text="@string/value" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/base_dur_label"
        android:layout_below="@+id/base_dur"
        android:layout_marginTop="26dp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/description_label"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/value_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/save" />
    
</RelativeLayout>